[package]
name = "codex-tools-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
codex-apply-patch = { git = "https://github.com/openai/codex.git", package = "codex-apply-patch", branch = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
